force-app/main/default/objects/Partner_Expansion__c/Partner_Expansion__c.object-meta.xml
<CustomObject>
    <label>Partner Expansion</label>
    <pluralLabel>Partner Expansions</pluralLabel>
    <nameField>
        <displayFormat>EXP-{00000000}</displayFormat>
        <label>Expansion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>