force-app/main/default/objects/Partner_Expansion__c/fields/Expansion_Type__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Type__c</fullName>
    <label>Expansion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seat Increase</fullName>
                <default>true</default>
                <label>Seat Increase</label>
            </value>
            <value>
                <fullName>Usage Increase</fullName>
            </value>
            <value>
                <fullName>Additional Product</fullName>
            </value>
            <value>
                <fullName>Additional Business Unit</fullName>
            </value>
            <value>
                <fullName>Geographic Expansion</fullName>
            </value>
            <value>
                <fullName>Tier Upgrade</fullName>
            </value>
            <value>
                <fullName>Add-On Module</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>