force-app/main/default/objects/Partner_Expansion__c/fields/Identified_On__c.field-meta.xml
<CustomField>
    <fullName>Identified_On__c</fullName>
    <label>Identified On</label>
    <type>DateTime</type>
</CustomField>