force-app/main/default/objects/Partner_Expansion__c/fields/Originating_Deal__c.field-meta.xml
<CustomField>
    <fullName>Originating_Deal__c</fullName>
    <label>Originating Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipName>Expansions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>