force-app/main/default/objects/Partner_Expansion__c/fields/Primary_Partner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner__c</fullName>
    <label>Primary Partner</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expansions (Primary Partner)</relationshipLabel>
    <relationshipName>Partner_Expansions_As_Partner</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>