force-app/main/default/objects/Partner_Expansion__c/fields/Qualified_On__c.field-meta.xml
<CustomField>
    <fullName>Qualified_On__c</fullName>
    <label>Qualified On</label>
    <type>DateTime</type>
</CustomField>