force-app/main/default/objects/Partner_Expansion__c/fields/Resulting_Deal__c.field-meta.xml
<CustomField>
    <fullName>Resulting_Deal__c</fullName>
    <label>Resulting Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Expansions (Resulting Deal)</relationshipLabel>
    <relationshipName>Expansions_As_Resulting_Deal</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>